# rust-dicom

./: .gitignore  Cargo.toml  README.md  README_NEW.md  debug_sop.rs
src/: dicom_client.rs  dicom_client_broken.rs  dicom_client_broken2.rs  dicom_client_mock.rs  dicom_client_real2.rs  dicom_client_simple.rs  dicom_client_working.rs  lib.rs  main.rs  main_new.rs  main_old.rs  sop_classes.rs  transfer_syntaxes.rs
src/common/: mod.rs  sop_classes.rs  transfer_syntaxes.rs  types.rs
src/receiver/: main.rs  mod.rs  receiver.rs  receiver_arc.rs  receiver_broken.rs  receiver_broken2.rs  receiver_new.rs  receiver_old.rs  receiver_simplified.rs
src/sender/: dicom_client.rs  main.rs  mod.rs
