[package]
name = "dicom-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
dicom = "0.8"
dicom-core = "0.8"
dicom-object = "0.8"
dicom-ul = "0.8"
dicom-dictionary-std = "0.8"
dicom-transfer-syntax-registry = "0.8"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
console = "0.15"
walkdir = "2.3"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
smallvec = "1.0"
